agent hire dropdown upgrade implementation

--- a/src/client/dashboard/agentswindow/agenthire.form.styl
+++ b/src/client/dashboard/agentswindow/agenthire.form.styl
@@ -1,2 +1,107 @@
 #AgentHireForm
+  height 120px
+  width 370px
   margin 10px
+  padding 10px
+  background darkslategrey
+  border-radius 1em
+
+  form
+    border 0
+
+#HireAgentButton
+  background-color black
+  position absolute
+  height 90px
+  width 90px
+  left 250px
+
+.Specialist-root
+  background-color orange
+  border none
+  color #000
+  display block
+  font-weight bold
+  height 30px
+  line-height 1.8
+  margin 10px
+  padding 0 1em
+  position absolute
+  left 120px
+  text-align center
+  transition all 1000ms ease
+  top 10px
+  width 100px
+  z-index 1000
+
+  .Specialist-control
+    display block
+    z-index 1000
+
+    .Specialist-placeholder
+      display block
+      z-index 1000
+
+  .Specialist-menu
+    box-sizing border-box
+    display block
+    max-height 200px
+    padding 1px
+    padding-right 5px
+    z-index 1000
+
+    .Dropdown-option
+      background-color orange
+      box-sizing border-box
+      cursor pointer
+      display block
+      height 25px
+      padding 1px
+      padding-right 5px
+      width 100px
+      z-index 1000px
+
+.Rank-root
+  background-color red
+  border none
+  color #000
+  display block
+  font-weight bold
+  height 30px
+  line-height 1.8
+  margin 10px
+  padding 0 1em
+  position absolute
+  left 10px
+  text-align center
+  transition all 1000ms ease
+  top 10px
+  width 100px
+  z-index 1000
+
+  .Rank-control
+    display block
+    z-index 1000
+
+    .Rank-placeholder
+      display block
+      z-index 1000
+
+  .Rank-menu
+    box-sizing border-box
+    display block
+    max-height 200px
+    padding 1px
+    padding-right 5px
+    z-index 1000
+
+    .Dropdown-option
+      background-color red
+      box-sizing border-box
+      cursor pointer
+      display block
+      height 25px
+      padding 1px
+      padding-right 5px
+      width 100px
+      z-index 1000px
