scrollbar corrections, dashboard adjustments

--- a/src/client/dashboard/agentswindow/agenthire.form.styl
+++ b/src/client/dashboard/agentswindow/agenthire.form.styl
@@ -1,13 +1,28 @@
 #AgentHireForm
-  height 120px
+  height 170px
   width 370px
   margin 10px
   padding 10px
   background darkslategrey
   border-radius 1em
 
+  h3
+    position absolute
+    top 10px
+
   form
-    border 0
+    border none
+
+    fieldset
+      border none
+
+  #AgentHirePriceTag
+    position absolute
+    top 115px
+    left 25px
+    font-weight bold
+    font-size 1.9em
+    color lime
 
 #HireAgentButton
   background-color black
@@ -16,7 +31,7 @@
   width 90px
   left 250px
 
-.Specialist-root
+.specialist-root
   background-color orange
   border none
   color #000
@@ -30,19 +45,19 @@
   left 120px
   text-align center
   transition all 1000ms ease
-  top 10px
+  top 60px
   width 100px
   z-index 1000
 
-  .Specialist-control
+  .specialist-control
     display block
     z-index 1000
 
-    .Specialist-placeholder
+    .specialist-placeholder
       display block
       z-index 1000
 
-  .Specialist-menu
+  .specialist-menu
     box-sizing border-box
     display block
     max-height 200px
@@ -61,7 +76,7 @@
       width 100px
       z-index 1000px
 
-.Rank-root
+.rank-root
   background-color red
   border none
   color #000
@@ -75,19 +90,19 @@
   left 10px
   text-align center
   transition all 1000ms ease
-  top 10px
+  top 60px
   width 100px
   z-index 1000
 
-  .Rank-control
+  .rank-control
     display block
     z-index 1000
 
-    .Rank-placeholder
+    .rank-placeholder
       display block
       z-index 1000
 
-  .Rank-menu
+  .rank-menu
     box-sizing border-box
     display block
     max-height 200px
