--- a/src/client/dashboard/agentswindow/agentswindow.styl
+++ b/src/client/dashboard/agentswindow/agentswindow.styl
@@ -5,6 +5,35 @@
   width 999px
   border 1px solid black
 
+  #AgentsWindowMessage
+    border 1px solid white
+    position absolute
+    top 185px
+    text-align center
+    width 365px
+    height 55px
+    left 15px
+    border-radius 0.5em
+
+  #AgentsList
+    position absolute
+    border 1px solid white
+    border-radius 0.5em
+    width 550px
+    height 245px
+    top 5x
+    left 390px
+
+    table
+      border 1px solid black
+      margin 3px
+
+      tr
+        border 1px solid black
+
+        td
+          padding 3px
+
 .no-agent-for-hire
   position relative
   height 144px
