mission logging and user-select bug fixes

--- a/src/client/mission/missioncard/actions.styl
+++ b/src/client/mission/missioncard/actions.styl
@@ -62,7 +62,7 @@
   background-size 55px 55px
   background-repeat no-repeat
 
-.action.improv_el.actual.electronics
+.action.improv.actual.electronics
   background url('../../../../assets/img/missions/actions/improv_el.jpg')
   background-size 55px 55px
   background-repeat no-repeat
