dice state refactor, and errors fixing

--- a/src/client/dashboard/dashboardscreen.styl
+++ b/src/client/dashboard/dashboardscreen.styl
@@ -28,6 +28,13 @@
   width 120px
   height 30px
 
+.set-default-button
+  position absolute
+  left 10px
+  bottom 10px
+  width 180px
+  height 30px
+
 .dashboardscreen-pointer
   position absolute
   left 1490px
