--- a/src/client/mission/agentstier/agentonmission/agentonmission.styl
+++ b/src/client/mission/agentstier/agentonmission/agentonmission.styl
@@ -6,7 +6,7 @@
   width 425px
   height 265px
   margin 0px
-  border 1px solid black
+  border 2px solid darkred
 
 #AgentOnMissionStatus
   color orangered
