--- a/src/client/navs/missiontodashboard.styl
+++ b/src/client/navs/missiontodashboard.styl
@@ -1,6 +1,6 @@
 #MissionToDashboardButton
   position absolute
-  top 70px
+  bottom 10px
   width 120px
   height 50px
   background-color darkblue
