--- a/src/client/navs/dashboardtohelp.styl
+++ b/src/client/navs/dashboardtohelp.styl
@@ -1,7 +1,8 @@
 #DashboardToHelp
   position absolute
-  top 150px
+  bottom 10px
   left 10px
   width 120px
   height 50px
   background-color gold
+  font-size 1.6em
