--- a/src/client/agents/agentequipcontent.styl
+++ b/src/client/agents/agentequipcontent.styl
@@ -13,11 +13,19 @@
     font-size 1.4em
     color green
 
+  #BackFromArmory
+    position absolute
+    top 175px
+    left 840px
+    background-color black
+    z-index 10001
+
   #UnequipAll
     position absolute
-    top 300px
-    left 200px
-    background-color darkgrey
+    top 175px
+    left 430px
+    background-color black
+    z-index 1001
 
   #ActiveMissionTasks
     position absolute
@@ -28,8 +36,8 @@
 
   #DismissAgentButton
     position absolute
-    top 290px
-    left 1010px
+    top 420px
+    left 890px
     width 150px
     height 45px
     background-color black
