--- a/src/client/navs/commandtobriefing.styl
+++ b/src/client/navs/commandtobriefing.styl
@@ -1,7 +1,7 @@
 #CommandToBriefing
   position absolute
-  right 10px
-  top 70px
+  left 10px
+  top 10px
   width 120px
   height 50px
   background-color darkgreen
