--- a/src/client/navs/dashboardtocommand.styl
+++ b/src/client/navs/dashboardtocommand.styl
@@ -1,7 +1,7 @@
 #DashboardToCommand
   position absolute
   top 10px
-  left 10px
+  right 10px
   width 130px
   height 50px
   background-color darkblue
