--- a/src/client/navs/dashboardtomission.styl
+++ b/src/client/navs/dashboardtomission.styl
@@ -1,7 +1,8 @@
 #DashboardToMission
   position absolute
   top 220px
-  left 10px
-  width 130px
-  height 50px
+  left 550px
+  width 240px
+  height 90px
   background-color darkred
+  font-size 2em
