missions focus stub, cleaning the code from warnings

--- a/src/client/agents/scrollbar/agentscrollbar.styl
+++ b/src/client/agents/scrollbar/agentscrollbar.styl
@@ -8,6 +8,11 @@
   width 6000px
   height 146px
 
+#AgentListPlaceholder
+  color silver
+  font-size 2em
+  font-weight bold
+
 .agent-scroll-bar
   list-style none
   display inline-block
