--- a/src/client/app/language.select.styl
+++ b/src/client/app/language.select.styl
@@ -1,4 +1,4 @@
-.Dropdown
+.Dropdown-root
   background-color aliceblue
   border none
   border-radius 1em
@@ -13,7 +13,7 @@
   right 10px
   text-align center
   transition all 1000ms ease
-  top 10px
+  top 100px
   width 100px
   z-index 1000
 
