--- a/src/client/dashboard/contestwindow/contestwindow.styl
+++ b/src/client/dashboard/contestwindow/contestwindow.styl
@@ -1,8 +1,8 @@
 #ContestWindow
   position relative
-  top 252px
-  left 1000px
-  height 608px
+  top 10px
+  left 500px
+  height 808px
   width 339px
   border 1px solid orange
   border-radius 0.5em
@@ -31,3 +31,10 @@
 
   td
     height 34px
+
+  #RefreshContestButton
+    position absolute
+    color black
+    background-color gold
+    bottom 0px
+    right 0px
