--- a/src/client/dashboard/countrieswindow/countrystatswindow.styl
+++ b/src/client/dashboard/countrieswindow/countrystatswindow.styl
@@ -1,6 +1,6 @@
 #CountryStatsOverview
   position absolute
-  top 0px
+  top 150px
   left 1000px
   height 250px
   width 339px
@@ -16,8 +16,8 @@
 
   th
     height 39px
-    background-color yellow
-    color white
+    background-color gold
+    color black
 
   td
     height 34px
