--- a/src/client/dashboard/logwindow/log.window.styl
+++ b/src/client/dashboard/logwindow/log.window.styl
@@ -1,9 +1,10 @@
 #LogWindow
   position absolute
-  width 529px
-  height 460px
-  left 470px
-  top 400px
+  width 1100px
+  height 840px
+  left 120px
+  top 10px
+  padding 10px
   border 1px solid maroon
   overflow-x hidden
   overflox-y auto
