prevent same equipment, polishing, correcting, log save and clear stubs

--- a/src/client/agents/agentcard/agentcard.styl
+++ b/src/client/agents/agentcard/agentcard.styl
@@ -6,7 +6,7 @@
   width 260px
   margin-left 2px
   margin-right 2px
-  border 2px solid darkblue
+  border 2px solid black
   background-color dimgray
   z-index 1
 
