--- a/src/client/auth/login.styl
+++ b/src/client/auth/login.styl
@@ -12,36 +12,49 @@
   height 130px
   left 630px
   top 335px
-
   display inline-block
   zoom 1
 
   form
     width 20em
+    border silver
 
   input
     width 100%
     margin .25em
 
+  legend
+    background-color black
+    color silver
+
   button
-    font-size .75em
-    background-color royalblue
+    font-size 1.5em
+    background-color silver
+    color black
 
   .error-message
     color red
 
+  a
+    color silver
+
 .logout-button
   background-color red
+  color black
+  border-color silver
+  text-shadow 2px 2px 8px black
 
 .login-button
   position absolute
   width 120px
   left 0
   top 2px
-  background-color royalblue
+  background-color silver
+  color black
 
 #LoginToSignup
   background-color gold
+  color black
   position absolute
   right 650px
   top 300px
@@ -49,7 +62,8 @@
 
 #LoginToIntro
   position absolute
-  background-color darkgreen
+  background-color silver
+  color black
   right 10px
   top 10px
   opacity 0.8
