--- a/src/client/auth/signup.styl
+++ b/src/client/auth/signup.styl
@@ -15,30 +15,36 @@
 
   form
     width 20em
+    border-color gold
 
   input
     width 100%
     margin .25em
 
+  legend
+    color gold
+
   button
-    font-size .75em
+    font-size 1.5em
     background-color gold
+    color black
 
   .error-message
     color red
 
 .signup-button
   position absolute
-  width 120px
+  font-size 1.5em
   left 10%
   margin-left -10px
   top 2px
-  background-color gold
+  background-color black
   z-index 1000
 
 #SignupToLogin
   position absolute
   top 250px
   right 650px
-  background-color blue
+  color black
+  background-color silver
   opacity 0.5
