--- a/src/client/dashboard/agentswindow/agenthire.form.styl
+++ b/src/client/dashboard/agentswindow/agenthire.form.styl
@@ -22,7 +22,7 @@
     left 25px
     font-weight bold
     font-size 1.9em
-    color lime
+    color black
 
 #HireAgentButton
   background-color black
@@ -32,7 +32,7 @@
   left 250px
 
 .specialist-root
-  background-color orange
+  background-color silver
   border none
   color #000
   display block
@@ -77,7 +77,7 @@
       z-index 1000px
 
 .rank-root
-  background-color red
+  background-color silver
   border none
   color #000
   display block
