--- a/src/client/dashboard/agentswindow/agents.list.record.styl
+++ b/src/client/dashboard/agentswindow/agents.list.record.styl
@@ -1,14 +1,14 @@
 .agent-list-record.operative
-  color gold
+  color red
   font-weight bold
-  background-color red
+  background-color silver
 
 .agent-list-record.technician
-  color silver
+  color green
   font-weight bold
-  background-color green
+  background-color silver
 
 .agent-list-record.spy
-  color black
+  color gold
   font-weight bold
-  background-color gold
+  background-color silver
