--- a/src/client/dashboard/countrieswindow/countrystatswindow.styl
+++ b/src/client/dashboard/countrieswindow/countrystatswindow.styl
@@ -4,7 +4,7 @@
   left 1000px
   height 250px
   width 339px
-  border 1px solid crimson
+  border 1px solid black
 
   table
     height 250px
@@ -16,8 +16,8 @@
 
   th
     height 39px
-    background-color gold
-    color black
+    background-color black
+    color gold
 
   td
     height 34px
