--- a/src/client/dashboard/missionswindow/missionaccept.form.styl
+++ b/src/client/dashboard/missionswindow/missionaccept.form.styl
@@ -17,6 +17,14 @@
     fieldset
       border none
 
+#MissionAcceptPriceTag
+  position absolute
+  left 20px
+  bottom 20px
+  font-weight bold
+  font-size 1.5em
+  color black
+
 #MissionAcceptButton
   position absolute
   width 90px
@@ -27,7 +35,7 @@
   color silver
 
 .tier-root
-  background-color red
+  background-color silver
   border none
   color #000
   display block
@@ -72,7 +80,7 @@
       z-index 1000px
 
 .focus-root
-  background-color orange
+  background-color silver
   border none
   color #000
   display block
@@ -120,7 +128,7 @@
       z-index 1000px
 
 .country-root
-  background-color red
+  background-color silver
   border none
   color #000
   display block
