--- a/src/client/dashboard/playerswindow/playerswindow.styl
+++ b/src/client/dashboard/playerswindow/playerswindow.styl
@@ -21,10 +21,9 @@
 #PlayerName
   position absolute
   height 50px
-  width 200px
   text-align center
   font-size 2em
-  border 1px solid blue
+  min-width 200px
 
 #PlayerPicture
   position absolute
