--- a/src/client/equipments/equipment.styl
+++ b/src/client/equipments/equipment.styl
@@ -4,8 +4,8 @@
   top 480px
   width 270px
   height 320px
-  border 1px solid slateblue
-  color gold
+  border 1px solid silver
+  color silver
 
 .equipment-stock.operations
   left 140px
@@ -39,6 +39,7 @@
   padding 2px
   padding-bottom 5px
   border-radius 25px
+  color black
 
 .equipment-sell-btn
   display inline-block
@@ -49,6 +50,7 @@
   padding 2px
   padding-bottom 5px
   border-radius 25px
+  color black
 
 .equipment-stock-item
   position absolute
@@ -129,7 +131,7 @@
 
 .equipment-stock-counter
   position relative
-  border 1px solid slateblue
+  border 1px solid black
   left 130px
   width 120px
   height 80px
