--- a/src/client/help/equipments.styl
+++ b/src/client/help/equipments.styl
@@ -20,22 +20,34 @@ div.help-equipments
         height 55px
       li.agent-equipment.HiredGun
         background-image url('../../../assets/img/equipments/hired_gun_256.png')
+        background-color red
       li.agent-equipment.HeavyArms
         background-image url('../../../assets/img/equipments/heavy_arms_256.png')
+        background-color red
       li.agent-equipment.ProtectiveGear
         background-image url('../../../assets/img/equipments/protective_gear_256.png')
+        background-color red
       li.agent-equipment.HandyKit
         background-image url('../../../assets/img/equipments/electronics_kit_256.png')
+        background-color aqua
+        color silver
       li.agent-equipment.CustomTools
         background-image url('../../../assets/img/equipments/custom_tools_196.png')
+        background-color aqua
+        color silver
       li.agent-equipment.WPAS
         background-image url('../../../assets/img/equipments/WPAS_256.png')
+        background-color aqua
+        color silver
       li.agent-equipment.FakePassports
         background-image url('../../../assets/img/equipments/passports_256.png')
+        background-color black
       li.agent-equipment.DrugsControl
         background-image url('../../../assets/img/equipments/drugs_control_256.png')
+        background-color black
       li.agent-equipment.DCP
         background-image url('../../../assets/img/equipments/damage_control_256.png')
+        background-color black
 
 
 
