--- a/src/client/mission/missioncard/actions.styl
+++ b/src/client/mission/missioncard/actions.styl
@@ -3,13 +3,13 @@
   width 85px
   height 85px
   margin-right 10px
-  border 2px solid red
+  border 2px solid black
 
 .action.actual
   width 55px
   height 55px
   margin-right 10px
-  border 1px solid darkred
+  border 1px solid black
 
 .action.monitor.actual
   background url('../../../../assets/img/missions/actions/monitor.jpg')
