--- a/src/client/navs/dashboardtocommand.styl
+++ b/src/client/navs/dashboardtocommand.styl
@@ -4,4 +4,6 @@
   right 10px
   width 130px
   height 50px
-  background-color darkblue
+  background-color silver
+  color black
+  font-size 1.1em
