--- a/src/client/agents/agentequipcontent.styl
+++ b/src/client/agents/agentequipcontent.styl
@@ -11,20 +11,27 @@
     left 200px
     font-weight bold
     font-size 1.4em
-    color green
+    color silver
+
+  #ArmoryMessage
+    position absolute
+    right 90px
+    top 200px
+    width 350px
+    height 100px
+    border 1px solid white
+    color white
 
   #BackFromArmory
     position absolute
     top 175px
     left 840px
-    background-color black
     z-index 10001
 
   #UnequipAll
     position absolute
     top 175px
     left 430px
-    background-color black
     z-index 1001
 
   #ActiveMissionTasks
