--- a/src/client/auth/login.message.styl
+++ b/src/client/auth/login.message.styl
@@ -4,7 +4,7 @@
   left 580px
   height 150px
   width 440px
-  border 1px solid blue
+  border 1px solid gold
   border-radius 1em
   display flex
   text-align center
