--- a/src/client/dashboard/logwindow/log.window.styl
+++ b/src/client/dashboard/logwindow/log.window.styl
@@ -11,3 +11,21 @@
 
 .log-record
   display block
+
+#SaveLogButton
+  position absolute
+  width 110px
+  height 45px
+  background-color silver
+  color black
+  bottom 10px
+  right 10px
+
+#ClearLogButton
+  position absolute
+  width 110px
+  height 45px
+  background-color red
+  color silver
+  bottom 65px
+  right 10px
