--- a/src/client/dashboard/missionswindow/missionswindow.styl
+++ b/src/client/dashboard/missionswindow/missionswindow.styl
@@ -5,6 +5,15 @@
   width 1340px
   border 1px solid maroon
 
+#MissionsWindowMessage
+  position absolute
+  bottom 20px
+  left 10px
+  border 1px solid white
+  border-radius 1em
+  width 550px
+  height 100px
+
 #MissionAcceptButtons
   position absolute
   width 200px
