--- a/src/client/help/helpscreen.styl
+++ b/src/client/help/helpscreen.styl
@@ -4,7 +4,6 @@
   height 860px
   left 50%
   margin-left -820px
-  border 1px solid black
 
 .help-content
   position relative
@@ -14,6 +13,8 @@
   font-weight bold
   text-align center
   color gold
+  border 1px solid gold
+  border-radius 1em
 
 .help-content::-webkit-scrollbar
   display none
