--- a/src/client/introduction/intro.screen.styl
+++ b/src/client/introduction/intro.screen.styl
@@ -3,14 +3,15 @@
   left 50%
   margin-left -500px
   width 1000px
-  border 1px solid white
+  border 1px solid silver
   border-radius 1em
   text-align center
   padding 5px
-  color gold
+  color silver
 
 #IntroToLogin
   position absolute
   top 30px
   left 100px
-  background-color darkblue
+  background-color silver
+  color black
