--- a/src/client/navs/dashboardtobriefing.styl
+++ b/src/client/navs/dashboardtobriefing.styl
@@ -4,4 +4,6 @@
   left 10px
   width 120px
   height 50px
-  background-color darkgreen
+  background-color silver
+  color black
+  font-size 1.25em
