--- a/src/client/navs/tomission.styl
+++ b/src/client/navs/tomission.styl
@@ -4,5 +4,7 @@
   right 10px
   width 100px
   height 50px
-  color yellow
-  background-color darkred
+  color gold
+  background-color black
+  font-size 1.1em
+  text-shadow 2px 2px 8px gold
