avoid fatals, maxSkill for agents, refreshing contest

--- a/src/client/dashboard/missionswindow/missionaccept.form.styl
+++ b/src/client/dashboard/missionswindow/missionaccept.form.styl
@@ -17,6 +17,17 @@
     fieldset
       border none
 
+    label
+      font-weight bold
+      position absolute
+      top 130px
+      left 45px
+
+  #AvoidFatalsCheck
+    position absolute
+    top 130px
+    left 25px
+
 #MissionAcceptPriceTag
   position absolute
   left 20px
