--- a/src/client/app/app.styl
+++ b/src/client/app/app.styl
@@ -51,6 +51,21 @@ ul li
 div
   display inline-block
 
+label
+  display block
+  padding-left 15px
+  text-indent -15px
+
+  input
+    width 13px
+    height 13px
+    padding 0
+    margin 0
+    vertical-align bottom
+    position relative
+    top -1px
+    *overflow hidden
+
 #app
   margin 1em 2em
 
