Agent free from prison, options debug, mission accept refactor, some styling

--- a/src/client/briefing/briefingscreen.styl
+++ b/src/client/briefing/briefingscreen.styl
@@ -25,3 +25,12 @@
   border-top 30px solid transparent
   border-right 60px solid darkred
   border-bottom 30px solid transparent
+
+#BriefingMessage
+  position absolute
+  border 1px solid white
+  left 1150px
+  top 100px
+  width 450px
+  height 140px
+  color white
