--- a/src/client/dashboard/missionswindow/missionaccept.form.styl
+++ b/src/client/dashboard/missionswindow/missionaccept.form.styl
@@ -45,6 +45,14 @@
   background-color black
   color silver
 
+#DashboardTotalMissionCounter
+  position absolute
+  font-size 1.7em
+  font-weight bold
+  color black
+  top 110px
+  left 490px
+
 .tier-root
   background-color silver
   border none
