--- a/src/client/dashboard/playerswindow/playerswindow.styl
+++ b/src/client/dashboard/playerswindow/playerswindow.styl
@@ -1,7 +1,7 @@
 #PlayersWindow
   position absolute
   height 150px
-  width 670px
+  width 1340px
 
 #PlayerLabel
   position absolute
@@ -11,7 +11,7 @@
 
 #PlayerLiquidResources
   position absolute
-  right 0px
+  left 350px
   height 150px
   width 287px
 
@@ -37,3 +37,15 @@ button.buy10Contacts
   position absolute
   bottom 5px
   right 15px
+
+#PlayerOperationsCapability
+  position absolute
+  top 5px
+  right 5px
+  font-size 1.25em
+
+#PlayerAgentsLeadership
+  position absolute
+  top 45px
+  right 5px
+  font-size 1.25em
