--- a/src/client/agents/agentcard/agentcard.styl
+++ b/src/client/agents/agentcard/agentcard.styl
@@ -6,8 +6,9 @@
   width 260px
   margin-left 2px
   margin-right 2px
-  border 2px solid black
-  background-color dimgray
+  border 2px solid white
+  background-color black
+  color silver
   z-index 1
 
 .agent-picture
