--- a/src/client/dashboard/logwindow/log.window.styl
+++ b/src/client/dashboard/logwindow/log.window.styl
@@ -18,7 +18,16 @@
   height 45px
   background-color silver
   color black
-  bottom 10px
+  bottom 65px
+  right 10px
+
+#LoadLogButton
+  position absolute
+  width 110px
+  height 45px
+  background-color blue
+  color yellow
+  bottom 120px
   right 10px
 
 #ClearLogButton
@@ -27,5 +36,5 @@
   height 45px
   background-color red
   color silver
-  bottom 65px
+  bottom 10px
   right 10px
