tests client lib, tests api broken, game concepts stub

--- a/src/client/dashboard/agentswindow/agents.list.record.styl
+++ b/src/client/dashboard/agentswindow/agents.list.record.styl
@@ -9,6 +9,12 @@
   background-color silver
 
 .agent-list-record.spy
-  color gold
+  background-color black
   font-weight bold
-  background-color silver
+  color gold
+
+.agent-save-button
+  color black
+
+.agent-dismiss-button
+  color black
