--- a/src/client/introduction/intro.screen.styl
+++ b/src/client/introduction/intro.screen.styl
@@ -15,3 +15,16 @@
   left 100px
   background-color silver
   color black
+
+#IntroSidebar
+  position absolute
+  width 200px
+  left 250px
+  border 1px solid white
+  color white
+
+.game-concept-link
+  display block
+  left -100px
+  color black
+  background-color silver
