--- a/src/client/auth/login.message.styl
+++ b/src/client/auth/login.message.styl
@@ -4,9 +4,9 @@
   left 580px
   height 150px
   width 440px
-  border 1px solid gold
+  border 1px solid silver
   border-radius 1em
   display flex
   text-align center
   padding 5px
-  color gold
+  color silver
