--- a/src/client/auth/signup.styl
+++ b/src/client/auth/signup.styl
@@ -17,6 +17,9 @@
     width 20em
     border-color gold
 
+    fieldset
+      border-color gold
+
   input
     width 100%
     margin .25em
@@ -48,3 +51,11 @@
   color black
   background-color silver
   opacity 0.5
+
+#SignupToIntro
+  position absolute
+  background-color gold
+  color black
+  right 10px
+  top 10px
+  opacity 0.8
