animations, equipments fatigue and fail chances, some rewrites and stubs of added features

--- a/src/client/agents/scrollbar/agentscrollbarnavbutton.styl
+++ b/src/client/agents/scrollbar/agentscrollbarnavbutton.styl
@@ -6,6 +6,7 @@
   background-image url('../../../../assets/img/buttons/navigation-left-button.png')
   background-size 60px 134px
   background-repeat no-repeat
+  z-index 1001
 
 .agent-scroll-bar-nav-button.right
   width 60px
@@ -15,3 +16,4 @@
   background-image url('../../../../assets/img/buttons/navigation-right-button.png')
   background-size 60px 134px
   background-repeat no-repeat
+  z-index 1001
