--- a/src/client/agents/scrollbar/agentscrollbarwithnavbuttons.styl
+++ b/src/client/agents/scrollbar/agentscrollbarwithnavbuttons.styl
@@ -6,6 +6,9 @@
   width 910px
   height 153px
 
+  .agent-scroll-bar-nav-button
+    z-index 1001
+
 #AgentScrollBarWithNavButtons.briefing
   position absolute
   top 700px
