--- a/src/client/introduction/intro.screen.styl
+++ b/src/client/introduction/intro.screen.styl
@@ -76,6 +76,7 @@
       background-repeat no-repeat
       background-position 0px center
       display block
+      font-weight bold
       margin 4px
       padding-left 55px
       padding-top 5px
@@ -89,25 +90,24 @@
       height 55px
     li.agent-equipment.HiredGun
       background-image url('../../../assets/img/equipments/hired_gun_256.png')
-      background-color red
+      background-color black
     li.agent-equipment.HeavyArms
       background-image url('../../../assets/img/equipments/heavy_arms_256.png')
-      background-color red
+      background-color black
     li.agent-equipment.ProtectiveGear
       background-image url('../../../assets/img/equipments/protective_gear_256.png')
-      background-color red
+      background-color black
     li.agent-equipment.HandyKit
       background-image url('../../../assets/img/equipments/electronics_kit_256.png')
-      background-color aqua
-      color silver
+      background-color black
     li.agent-equipment.CustomTools
       background-image url('../../../assets/img/equipments/custom_tools_196.png')
-      background-color aqua
-      color silver
+      background-color black
     li.agent-equipment.WPAS
       background-image url('../../../assets/img/equipments/WPAS_256.png')
-      background-color aqua
-      color silver
+      background-color silver
+      color black
+
     li.agent-equipment.FakePassports
       background-image url('../../../assets/img/equipments/passports_256.png')
       background-color black
