mission result window stub, update of lprecover auth route, minor fixes

--- a/src/client/mission/agentstier/buttons/missionendbutton.styl
+++ b/src/client/mission/agentstier/buttons/missionendbutton.styl
@@ -1,5 +1,11 @@
 #MissionEndButton
   position absolute
   border 5px solid darkred
+  background-color red
+  font-size 1.2em
+  font-weight bold
   bottom 160px
-  right 0px
+  right 250px
+  width 150px
+  height 150px
+  border-radius 50%
