dashboard layout changes, written the 3 ends, stub for collections window

--- a/src/client/dashboard/optionswindow/debug.window.styl
+++ b/src/client/dashboard/optionswindow/debug.window.styl
@@ -1,13 +1,20 @@
 #DebugWindow
   position absolute
-  width 1340px
-  height 600px
+  width 670px
+  height 300px
   bottom 0px
   left 0px
   border 1px solid white
 
+  form
+    position absolute
+    width 40em
+    border silver
+
+    fieldset
+      position absolute
+
 #SanitizeStateButton
-  position absolute
   width 230px
   height 45px
   right 5px
@@ -17,7 +24,6 @@
 
 #SetDefaultMissionButton
   background-color red
-  position absolute
   left 10px
   bottom 10px
   width 220px
