--- a/src/client/dashboard/optionswindow/options.window.styl
+++ b/src/client/dashboard/optionswindow/options.window.styl
@@ -1,17 +1,19 @@
 #OptionsWindow
-  display flex
-  flex-position row
-  flex-wrap wrap
-  justify-content center
-  align-items center
+
+  .options-form
+    position absolute
+    top 180px
+
+    fieldset
+      position absolute
+      width 800px
+
+      label
+        display inline-block
+
 
   input
     margin 20px
 
   button
     margin 25px
-
-#RetireButton
-  position absolute
-  top 100px
-  right 0px
