--- a/src/client/dashboard/statuseswindow/statuses.window.styl
+++ b/src/client/dashboard/statuseswindow/statuses.window.styl
@@ -1,9 +1,11 @@
 #StatusesWindow
+  position absolute
   display flex
   flex-position row
   flex-wrap wrap
   justify-content center
   align-items center
+  top 235px
 
 .status-card
   color #fff
