End game stub; New, save, load Game; game Statistics in storage; styling changes

--- a/src/client/briefing/activemission/agentassignment.styl
+++ b/src/client/briefing/activemission/agentassignment.styl
@@ -12,7 +12,9 @@
   border 1px solid darkslategrey
 
 .assignment-text-placeholder
-  color gold
+  color black
+  text-align center
+  font-weight bold
 
 // #AgentAssignment1
 //   top 285px
