--- a/src/client/dashboard/achievementswindow/achievements.window.styl
+++ b/src/client/dashboard/achievementswindow/achievements.window.styl
@@ -1,11 +1,13 @@
 #AchievementsWindow
   position absolute
-  top 230px
+  top 165px
   display flex
   flex-direction row
   flex-wrap wrap
   align-items center
   justify-content center
+  background-image url('../../../../assets/img/bg/black_marble.jpg')
+  height 695px
 
 .achievement-card
   display flex
@@ -16,3 +18,7 @@
   background-color seashell
   border-radius 1em
   margin 10px
+  background-image url('../../../../assets/img/bg/white_marble.jpg')
+  font-weight bold
+  font-size 1.6em
+  text-align center
