--- a/src/client/dashboard/agentswindow/agents.list.record.styl
+++ b/src/client/dashboard/agentswindow/agents.list.record.styl
@@ -1,12 +1,11 @@
 .agent-list-record.operative
+  background-color black
   color red
   font-weight bold
-  background-color silver
 
 .agent-list-record.technician
   color green
   font-weight bold
-  background-color silver
 
 .agent-list-record.spy
   background-color black
