--- a/src/client/dashboard/contestwindow/contestwindow.styl
+++ b/src/client/dashboard/contestwindow/contestwindow.styl
@@ -1,21 +1,18 @@
 #ContestWindow
-  position relative
-  top 10px
-  left 500px
-  height 808px
-  width 339px
-  border 1px solid orange
+  position absolute
+  height 860px
+  width 1340px
   border-radius 0.5em
-  overflow-y hidden
-  overflow-x hidden
+  background-image url('../../../../assets/img/bg/white_marble.jpg')
+  font-weight bold
 
   table
-    background azure
+    top 10px
+    left 420px
     max-height 608px
-    position relative
-    top 5px
-    left 5px
-    width 329px
+    position absolute
+    width 460px
+    height 30px
     text-align center
     border-radius:10px;
     -moz-border-radius:10px;
@@ -26,8 +23,7 @@
 
   th
     height 39px
-    background-color skyblue
-    color white
+    color black
 
   td
     height 34px
