--- a/src/client/dashboard/countrieswindow/countrystatswindow.styl
+++ b/src/client/dashboard/countrieswindow/countrystatswindow.styl
@@ -5,6 +5,7 @@
   height 250px
   width 339px
   border 1px solid black
+  background-image url('../../../../assets/img/bg/smooth_metal.jpg')
 
   table
     height 250px
@@ -16,8 +17,9 @@
 
   th
     height 39px
-    background-color black
-    color gold
+    background-image url('../../../../assets/img/bg/smooth_metal.jpg')
+    color blue
 
   td
     height 34px
+    font-weight bold
