--- a/src/client/dashboard/dashboardscreen.styl
+++ b/src/client/dashboard/dashboardscreen.styl
@@ -10,7 +10,7 @@
   width 1340px
   height 860px
   left 150px
-  background-color lightgrey
+  background-color black
   border-radius 0.5em
 
 #DashboardScreenLogout
