--- a/src/client/dashboard/enhancementswindow/enhancement.card.styl
+++ b/src/client/dashboard/enhancementswindow/enhancement.card.styl
@@ -49,7 +49,7 @@
 
 #Repayingthefavors
   right 6px
-  top 230px
+  top 60px
 
   div
     display block
@@ -57,7 +57,7 @@
 
 #WeGotthePower
   right 228px
-  top 230px
+  top 60px
 
   div
     display block
@@ -65,7 +65,7 @@
 
 #SideQuest
   right 450px
-  top 230px
+  top 60px
 
   div
     display block
@@ -73,7 +73,7 @@
 
 #AugeanStables
   right 672px
-  top 230px
+  top 60px
 
   div
     display block
@@ -81,7 +81,7 @@
 
 #Nostalgia
   right 894px
-  top 230px
+  top 60px
 
   div
     display block
@@ -89,46 +89,46 @@
 
 #DeputyofLaw
   right 1118px
-  top 230px
+  top 60px
 
   div
     display block
     margin 3px
 
 #CleaningService
-  top 355px
+  top 440px
   right 5px
 
 #ArmyLevelCrypto
-  top 480px
+  top 310px
   right 5px
 
 #StorkInd\.
-  top 605px
+  top 185px
   right 5px
 
 #ArmsDealer
-  top 605px
+  top 185px
   right 890px
 
 #Laboratory
-  top 480px
+  top 310px
   right 890px
 
 #Pharmacy
-  top 355px
+  top 440px
   right 890px
 
 #Forger
-  top 605px
+  top 440px
   right 1113px
 
 #Workshop
-  top 480px
+  top 310px
   right 1113px
 
 #Locals
-  top 355px
+  top 185px
   right 1113px
 
 .enhancement-card
@@ -143,35 +143,52 @@
 
 .capability-enhancement-card
   position absolute
-  top 355px
-  right 230px
+  top 190px
+  right 232px
   width 305px
   height 360px
   margin 12px
   background-color whitesmoke
+  background-image url('../../../../assets/img/bg/red_velvet.jpg')
   border-radius 1em
+  color white
+  font-weight bold
   opacity 0.5
   text-align center
 
   div
     display block
-    margin 3px
+    margin-top 10px
+    margin-left 3px
+    margin-right 3px
+    margin-bottom 3px
+
+  button
+    color black
 
 .leadership-enhancement-card
   position absolute
-  top 355px
-  right 560px
+  top 190px
+  right 558px
   width 305px
   height 360px
   margin 12px
-  background-color whitesmoke
+  color whitesmoke
+  font-weight bold
+  background-image url('../../../../assets/img/bg/black_marble.jpg')
   border-radius 1em
   opacity 0.5
   text-align center
 
   div
     display block
-    margin 3px
+    margin-top 10px
+    margin-left 3px
+    margin-right 3px
+    margin-bottom 3px
+
+  button
+    color black
 
 .enhancement-card.owned
   opacity 1
