--- a/src/client/dashboard/enhancementswindow/enhancements.window.styl
+++ b/src/client/dashboard/enhancementswindow/enhancements.window.styl
@@ -1,3 +1,8 @@
 #EnhancementWindow
+  position absolute
   overflow-y hidden
   overflow-x hidden
+  background-image url('../../../../assets/img/bg/white_marble.jpg')
+  width 1340px
+  height 700px
+  top 160px
