--- a/src/client/dashboard/missionswindow/missionswindow.styl
+++ b/src/client/dashboard/missionswindow/missionswindow.styl
@@ -4,6 +4,7 @@
   height 460px
   width 1340px
   border 1px solid maroon
+  background-image url('../../../../assets/img/bg/smooth_metal.jpg')
 
 #MissionsWindowMessage
   position absolute
