--- a/src/client/dashboard/optionswindow/debug.window.styl
+++ b/src/client/dashboard/optionswindow/debug.window.styl
@@ -5,6 +5,7 @@
   bottom 0px
   left 0px
   border 1px solid white
+  background-image url('../../../../assets/img/bg/smooth_metal.jpg')
 
   form
     position absolute
