--- a/src/client/dashboard/optionswindow/options.window.styl
+++ b/src/client/dashboard/optionswindow/options.window.styl
@@ -1,16 +1,27 @@
 #OptionsWindow
+  position absolute
+  background-image url('../../../../assets/img/bg/smooth_metal.jpg')
+  width 1340px
+  height 695px
+  top 165px
 
   .options-form
     position absolute
-    top 180px
+    top 80px
+    left 80px
 
     fieldset
       position absolute
       width 800px
 
+      legend
+        font-weight bold
+        font-size 1.4em
+
       label
         display inline-block
-
+        font-weight bold
+        font-size 1.2em
 
   input
     margin 20px
