--- a/src/client/dashboard/playerswindow/playerswindow.styl
+++ b/src/client/dashboard/playerswindow/playerswindow.styl
@@ -2,6 +2,9 @@
   position absolute
   height 150px
   width 1340px
+  background-image url('../../../../assets/img/bg/smooth_metal.jpg')
+  font-weight bold
+  color blue
 
 #PlayerLabel
   position absolute
