--- a/src/client/mission/missioncard/results/missionresultlist.styl
+++ b/src/client/mission/missioncard/results/missionresultlist.styl
@@ -7,14 +7,15 @@
   position absolute
   margin 0
   padding 0
+  background-image url('../../../../../assets/img/bg/scratched_metal.jpg')
 
 .mission-result.loss
-  background-color silver
   box-shadow 0 0 10px black inset
+  padding 5px
 
 .mission-result.reward
-  background-color gold
   box-shadow 0 0 10px red inset
+  padding 5px
 
 .mission-result-list.task
   font-size 1.5em
