--- a/src/client/briefing/activemission/actualmissioncard.styl
+++ b/src/client/briefing/activemission/actualmissioncard.styl
@@ -17,6 +17,7 @@
   bottom 75px
   width 545px
   height 300px
+  background-image url('../../../../assets/img/bg/scratched_metal.jpg')
 
 .mission-card.actual
   position relative
