--- a/src/client/dashboard/agentswindow/agentswindow.styl
+++ b/src/client/dashboard/agentswindow/agentswindow.styl
@@ -4,6 +4,7 @@
   height 250px
   width 999px
   border 1px solid black
+  background-image url('../../../../assets/img/bg/smooth_metal.jpg')
 
   #AgentsWindowMessage
     border 1px solid white
