--- a/src/client/dashboard/logwindow/log.window.styl
+++ b/src/client/dashboard/logwindow/log.window.styl
@@ -5,9 +5,11 @@
   left 120px
   top 10px
   padding 10px
-  border 1px solid maroon
+  border 1px solid whitesmoke
   overflow-x hidden
   overflox-y auto
+  color whitesmoke
+  font-weight bold
 
 .log-record
   display block
