--- a/src/client/dashboard/statuseswindow/statuses.window.styl
+++ b/src/client/dashboard/statuseswindow/statuses.window.styl
@@ -5,21 +5,27 @@
   flex-wrap wrap
   justify-content center
   align-items center
-  top 235px
+  top 160px
+  height 700px
+  background-image url('../../../../assets/img/bg/sandstone.jpg')
 
 .status-card
   color #fff
   font-weight bold
   line-height 1.8
   text-shadow -1px 1px #417cb8
-  margin 2px
+  margin-top 2px
+  margin-left 4px
   text-align center
-  width 327px
+  width 330px
   height 202px
   border-radius 1em
   background-color mintcream
   border 1px solid blue
   opacity 0.5
+
+  button
+    color black
 
 .status-card.yacht
   background-image url('../../../../assets/img/statuses/yacht.jpg')
